# unishell

./: CMakeLists.txt  Directories.cpp  DirectoryCommands.cpp  Mukund_Parsing  Network.h  README.md  System.h  cd.cpp  echo.cpp  fileCommands.cpp  ls.cpp  main.cpp  man  man.cpp  mkdir.cpp  parsing.cpp  pwd.cpp  rmdir.cpp  trial3.cpp
linux/directory commands/: DirectoryCommandsLinux.cpp
linux/network commands/: networkCommandsLinux.cpp
linux/system commands/: KernelSystemLinux.cpp  LinuxHardware.cpp  LinuxHardware.h  LinuxInfo.cpp  LinuxInfo.h  LinuxSystem.cpp  LinuxSystem.h  Time.cpp  Time.h
man.dSYM/Contents/Resources/DWARF/: man
man.dSYM/Contents/Resources/Relocations/x86_64/: man.yml
windows/directory commands/: DirectoryCommandsWindows.cpp
windows/network commands/: networkCommandsWindows.cpp
windows/system commands/: Hardware.cpp  Hardware.h  HelperFunctions.cpp  HelperFunctions.h  KernalSystemOperations.cpp  Time.cpp  Time.h  WindowsInfo.cpp  WindowsInfo.h  WindowsSystem.cpp  WindowsSystem.h
